--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,9 @@ p, span, label, ul {
     background-color: var(--color-fondo);
 }
 
+.dNone {
+    display: none;
+}
 
 /* Componente: filtro de categorías */
 .activeCategory {
