--- a/src/index.css
+++ b/src/index.css
@@ -37,10 +37,18 @@ h3 {
 
 h5, h6, a {
     font-family: var(--fuente-parrafo);
-    font-weight: var(--peso-medium);
     text-transform: capitalize;
     color: var(--color-titulo);
 }
+
+h5 {
+    font-weight: var(--peso-parrafo);
+}
+
+h6, a {
+    font-weight: var(--peso-medium);
+}
+
 
 p, span, label, ul {
     font-family: var(--fuente-parrafo);
@@ -66,6 +74,10 @@ p, span, label, ul {
     display: none;
 }
 
+.subrayado {
+    border-bottom: 5px solid var(--color-fondo)
+}
+
 /* Componente: filtro de categorías */
 .activeCategory {
     font-weight: var(--peso-subtitulo);
@@ -73,4 +85,25 @@ p, span, label, ul {
     border-bottom: 5px solid var(--color-fondo);
     border-left: 0;
     border-right: 0;
+}
+
+/* Reglas específicas modal detalles receta*/
+.notas {
+    width: 30vw;
+    max-height: 50vh;
+    margin-left: 24px;
+    padding: 8px;
+    background-color: #DAE6F9;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 7px rgba(0, 0, 0, 0.06);
+
+}
+
+.modal{
+    background-color: white;
+    display: inline;
+    max-width: 85vw;
+    max-height: 85vh;
+    padding: 24px;
+    border: 3px solid #DAE6F9;
+    border-radius: 5px;
 }
