--- a/src/index.css
+++ b/src/index.css
@@ -83,6 +83,12 @@ li {
     border-bottom: 5px solid var(--color-fondo)
 }
 
+.btnPos{
+    position: relative;
+    top: 24px;
+    right: 0px;
+}
+
 /* Componente: filtro de categorías */
 .activeCategory {
     font-weight: var(--peso-subtitulo);
@@ -92,25 +98,34 @@ li {
     border-right: 0;
 }
 
-/* Reglas específicas modal detalles receta*/
+/* Reglas específicas modales */
+.modalForm, .modalRecipe {
+    width:80vw;
+    max-height:100vh;
+    overflow-y: auto;
+    margin: auto;
+    padding: 32px 24px 64px;
+    background-color: white;
+    border: 3px solid #DAE6F9;
+    border-radius: 5px;
+}
+
 .notas {
-    width: 30vw;
+    width: 32vw;
     max-height: 50vh;
+    overflow: auto;
     margin-left: 24px;
-    padding: 8px;
+    padding: 16px 8px;
     background-color: #DAE6F9;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 7px rgba(0, 0, 0, 0.06);
 
 }
 
-.modal{
-    background-color: white;
-    display: inline;
-    max-width: 85vw;
-    max-height: 85vh;
+.modalRecipe{
+    display: inline-block;
+    min-height: 50vh;
     padding: 24px;
-    border: 3px solid #DAE6F9;
-    border-radius: 5px;
+    position: relative;
 }
 
 /* Pagina 404 */
