--- a/src/auth/pages/loginPage.css
+++ b/src/auth/pages/loginPage.css
@@ -1,12 +1,25 @@
 .pagCompleta {
-    height: 100vh;
+    min-height: 100vh;
 }
 
+
 .loginBg {
-    height: 80vh;
+    width: 80%;
+    height: 40vh;
     background-color: var(--color-fondo);
     background-image: url('../../assets/img/niam-login-img.png');
-    background-size: 85%;
+    background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
 }
+
+
+@media screen and (min-width:768px) {
+    .loginBg {
+        width: 50vw;
+        height: 65vh;
+        background-size: cover;
+        margin-right: 40px;
+    }
+}
+
