--- a/src/index.css
+++ b/src/index.css
@@ -79,6 +79,10 @@ li {
     list-style: none;
 }
 
+pre {
+    text-transform: none;
+}
+
 
 /* Reglas recursivas */
 .colorFondo {
@@ -116,6 +120,12 @@ li {
     right: 0px;
 }
 
+.btnCerrar {
+    position: fixed;
+    top: 1%;
+    right: 4%;
+}
+
 /* Componente: filtro de categorías */
 .activeCategory {
     font-weight: var(--peso-subtitulo);
@@ -139,13 +149,24 @@ li {
 
 .notas {
     width: 32vw;
-    max-height: 50vh;
+    max-height: 40vh;
     overflow: auto;
     margin-left: 24px;
     padding: 16px 8px;
     background-color: #DAE6F9;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 7px rgba(0, 0, 0, 0.06);
+}
 
+.ingredientes, .elaboracion {
+    max-width: 450px;
+    max-height: 100px;
+    border: 1px solid #3D495C;
+    border-radius: 5px;
+}
+
+.elaboracion {
+    max-height: 250px;
+    white-space: pre-wrap;
 }
 
 .modalRecipe{
@@ -172,11 +193,21 @@ li {
     width: 150px;
     height: 150px;
     margin: calc(50vh - 75px) auto;
-    background-image: url('../public/img/cargando.svg');
+    background-image: url('../img/cargando.svg');
     background-size: contain;
     background-position: center;
 }
 
 .rotacion {
     animation: rotate 5s normal linear infinite;
+}
+
+
+
+
+/* Responsive */
+@media screen and (min-width: 768px) {
+    .btnCerrar{
+        top: 4%
+    }
 }
