--- a/src/auth/pages/loginPage.css
+++ b/src/auth/pages/loginPage.css
@@ -14,6 +14,15 @@
 }
 
 
+.mostrarContrasenia {
+    font-style: italic;
+    font-weight: lighter;
+    font-size: 14px;
+    color:var(--color-titulo) !important;
+}
+
+
+
 /* Responsive */
 @media screen and (min-width:768px) {
     .loginBg {
