arreglados pequeños detalles del front (responsive y estilo login)

--- a/src/auth/pages/loginPage.css
+++ b/src/auth/pages/loginPage.css
@@ -13,6 +13,10 @@
     background-position: center;
 }
 
+.pwInput{
+    background-color:  #FFFCC8;
+    padding:8px;
+}
 
 .mostrarContrasenia {
     font-style: italic;
